change index.html file

--- a/HỒ CÁ 1.HTML
+++ b/HỒ CÁ 1.HTML
@@ -302,27 +302,27 @@
     </style>
 </head>
 <body>
-    <img id="bachtuoc" src="/HỒ CÁ/images/bạch tuộc động.gif" alt="bachtuoc" width="10%">
-    <img id="cua" src="/HỒ CÁ/images/cua động.gif" alt="cua" width="8%" >
-    <img id="casoc" src="/HỒ CÁ/images/cá sọc động.gif" alt="casoc" height="15%">
-    <img id="vit" src="/HỒ CÁ/images/vịt lặn.gif" alt="vit" width="10%" >
-    <img id="turtle" src="/HỒ CÁ/images/turtle.png" alt="turtle" width="8%">
-    <img id="shark"src="/HỒ CÁ/images/shark.png" alt="shark" width="20%">
-    <img id="faintschool"src="/HỒ CÁ/images/faintSchool.png" alt="faintschool" width="10%">
-    <img id="diver4" src="/HỒ CÁ/images/diver4.gif" alt="diver4" width="30%">
-    <img id="ruadong2" src="/HỒ CÁ/images/rùa động 2.gif" alt="ruadong2" width="20%">
-    <img id="nangtienca" src="/HỒ CÁ/images/tien ca.webp" alt="nangtienca" width="30%">
-    <img id="sua2" src="/HỒ CÁ/images/sứa2.webp" alt="sua2" width="20%">
-    <img id="sua3" src="/HỒ CÁ/images/sứa2.webp" alt="sua3" width="20%">
-    <img id="bot"src="/HỒ CÁ/images/bubble.png" alt="bot" width="10%">
-    <img id="bot2"src="/HỒ CÁ/images/bubble.png" alt="bot2" width="10%">
-    <img id="bot3"src="/HỒ CÁ/images/bubble.png" alt="bot3" width="10%">
-    <img id="bot4"src="/HỒ CÁ/images/bubble.png" alt="bot4" width="10%">
-    <img id="bot5"src="/HỒ CÁ/images/bubble.png" alt="bot5" width="10%">
-    <img id="bot6"src="/HỒ CÁ/images/bubble.png" alt="bot6" width="10%">
-    <img id="bot7"src="/HỒ CÁ/images/bubble.png" alt="bot7" width="10%">
+    <img id="bachtuoc" src="HỒ CÁ/images/bạch tuộc động.gif" alt="bachtuoc" width="10%">
+    <img id="cua" src="HỒ CÁ/images/cua động.gif" alt="cua" width="8%" >
+    <img id="casoc" src="HỒ CÁ/images/cá sọc động.gif" alt="casoc" height="15%">
+    <img id="vit" src="HỒ CÁ/images/vịt lặn.gif" alt="vit" width="10%" >
+    <img id="turtle" src="HỒ CÁ/images/turtle.png" alt="turtle" width="8%">
+    <img id="shark"src="HỒ CÁ/images/shark.png" alt="shark" width="20%">
+    <img id="faintschool"src="HỒ CÁ/images/faintSchool.png" alt="faintschool" width="10%">
+    <img id="diver4" src="HỒ CÁ/images/diver4.gif" alt="diver4" width="30%">
+    <img id="ruadong2" src="HỒ CÁ/images/rùa động 2.gif" alt="ruadong2" width="20%">
+    <img id="nangtienca" src="HỒ CÁ/images/tien ca.webpp" alt="nangtienca" width="30%">
+    <img id="sua2" src="HỒ CÁ/images/sứa2.webp" alt="sua2" width="20%">
+    <img id="sua3" src="HỒ CÁ/images/sứa2.webp" alt="sua3" width="20%">
+    <img id="bot"src="HỒ CÁ/images/bubble.png" alt="bot" width="10%">
+    <img id="bot2"src="HỒ CÁ/images/bubble.png" alt="bot2" width="10%">
+    <img id="bot3"src="HỒ CÁ/images/bubble.png" alt="bot3" width="10%">
+    <img id="bot4"src="HỒ CÁ/images/bubble.png" alt="bot4" width="10%">
+    <img id="bot5"src="HỒ CÁ/images/bubble.png" alt="bot5" width="10%">
+    <img id="bot6"src="HỒ CÁ/images/bubble.png" alt="bot6" width="10%">
+    <img id="bot7"src="HỒ CÁ/images/bubble.png" alt="bot7" width="10%">
     <audio controls; autoplay>
-        <source src="/HỒ CÁ/images/water-bubbles-257594.mp3">
+        <source src="HỒ CÁ/images/water-bubbles-257594.mp3">
     </audio>
 </body>
 </html>
