--- a/HỒ CÁ/hồ cá1.HTML
+++ b/HỒ CÁ/hồ cá1.HTML
@@ -303,7 +303,7 @@
 </head>
 <body>
     <img id="bachtuoc" src="/HỒ CÁ/images/bạch tuộc động.gif" alt="bachtuoc" width="10%">
-    <img id="cua" src="/HỒ CÁ/images/cua động.gif" alt="cua" width="8%" >
+    <img id="cua" src="HỒ CÁ/images/cua động.gif" alt="cua" width="8%" >
     <img id="casoc" src="/HỒ CÁ/images/cá sọc động.gif" alt="casoc" height="15%">
     <img id="vit" src="/HỒ CÁ/images/vịt lặn.gif" alt="vit" width="10%" >
     <img id="turtle" src="/HỒ CÁ/images/turtle.png" alt="turtle" width="8%">
