--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>MSSV:50.01.103.045</h2>
         <a href="CV của Kim Ngân.html">Bài CV cá nhân</a>
         <br>
-        <a href="HỒ CÁ/HỒ CÁ 1.HTML">Bài hồ cá</a>
+        <a href="HỒ CÁ 1.HTML">Bài hồ cá</a>
     </div>
     
 </body>
