change index.html file

--- a/HỒ CÁ 1.HTML
+++ b/HỒ CÁ 1.HTML
@@ -311,7 +311,7 @@
     <img id="faintschool"src="HỒ CÁ/images/faintSchool.png" alt="faintschool" width="10%">
     <img id="diver4" src="HỒ CÁ/images/diver4.gif" alt="diver4" width="30%">
     <img id="ruadong2" src="HỒ CÁ/images/rùa động 2.gif" alt="ruadong2" width="20%">
-    <img id="nangtienca" src="HỒ CÁ/images/tien ca.webpp" alt="nangtienca" width="30%">
+    <img id="nangtienca" src="HỒ CÁ/images/tien ca.webp" alt="nangtienca" width="30%">
     <img id="sua2" src="HỒ CÁ/images/sứa2.webp" alt="sua2" width="20%">
     <img id="sua3" src="HỒ CÁ/images/sứa2.webp" alt="sua3" width="20%">
     <img id="bot"src="HỒ CÁ/images/bubble.png" alt="bot" width="10%">
