change index.html file

--- a/CV của Kim Ngân.html
+++ b/CV của Kim Ngân.html
@@ -87,7 +87,7 @@
          <td class="td1"> 
             <p>TRÌNH ĐỘ HỌC VẤN</p>
             <ul>
-                <li>2021-2023: THPT Trung Phú<a href="https://thpttrungphu.hcm.edu.vn/homegd6"><img src ="/hình/logo THPT Trung Phú.PNG" width ="10%" ></a></li>
+                <li>2021-2023: THPT Trung Phú<a href="https://thpttrungphu.hcm.edu.vn/homegd6"><img src ="hình/logo THPT Trung Phú.PNG" width ="10%" ></a></li>
                 <LI>2024: Đại học sư phạm thành phố Hồ Chí Minh.</LI>
                     Khoa: Công nghệ thông tin.<br>
                     Ngành: Sư phạm tin học.<br>
@@ -99,12 +99,12 @@
             </UL>
             <p>HOẠT ĐỘNG</p>
             <UL>
-                <li><A href="https://www.facebook.com/hocsinhtphcm?locale=vi_VN"><IMG SRC="/WEB CV/HPĐ.png" WIDTH="10%"></A>Tham gia dự án "Hoa phượng đỏ": tình nguyện tham gia các hoạt động tổ chức trò chơi sinh hoạt hè cho các em ở địa phương.</li>
+                <li><A href="https://www.facebook.com/hocsinhtphcm?locale=vi_VN"><IMG SRC="WEB CV/HPĐ.png" WIDTH="10%"></A>Tham gia dự án "Hoa phượng đỏ": tình nguyện tham gia các hoạt động tổ chức trò chơi sinh hoạt hè cho các em ở địa phương.</li>
                 <li>Tham gia các hoạt động của trường cấp thpt.</li>
             </UL>
             <p>THÔNG TIN THÊM</p>
             <UL>
-                <LI>Địa chỉ: 136A, Nguyễn Kim Cương, ấp 8, xã Tân Thạnh Đông, huyện Củ Chi, thành phố Hồ Chí Minh, Việt Nam<img src="/WEB CV/hình lá cờ.jpg" width="50" height="30"></LI>
+                <LI>Địa chỉ: 136A, Nguyễn Kim Cương, ấp 8, xã Tân Thạnh Đông, huyện Củ Chi, thành phố Hồ Chí Minh, Việt Nam<img src="WEB CV/hình lá cờ.jpg" width="50" height="30"></LI>
                 <li>SĐT: 0765558824</li>
                 <li>Gmail: 5001103045@student.hcmue.edu.vn</li>
                 <li>Mã số sinh viên: 50.01.103.045</li>
